feat(SER-3203): Add country relation on the SMS bridge entity